No scrollbar fix

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
+  overflow: hidden;
 }
 
 #score {
